--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,14 @@ dependencies {
     compile 'com.google.android.gms:play-services:11.0.4'
     compile 'com.android.support:support-v4:26.+'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.android.support:support-v4:23.0.1'
+
+    compile 'com.google.code.gson:gson:2.8.0'
+
+    // Remote binary dependency
+    compile 'net.schmizz:sshj:0.10.0'
+
+    compile 'com.loopj.android:android-async-http:1.4.9'
 }
 apply plugin: 'com.google.gms.google-services'
