--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -32,10 +34,6 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDGtvuyJyMeeoKDuIt0vS-JvJEXHwiUwCM"/>
 
         <provider
             android:name="com.facebook.FacebookContentProvider"
@@ -65,6 +63,11 @@
         <!-- https://developers.google.com/places/web-service/search : AIzaSyABNpwVRjWbPr8zHc5-ZKa8yuLffZmVKKE -->
 
         <activity android:name=".activities.InfoMapActivity"></activity>
+
+
+
     </application>
+
+
 
 </manifest>
